# moon-dev-ai-agents

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACTIEPLAN.md  AGENTS.md  AGENT_FILE_SIZE_COMPLIANCE_REPORT.md  BACKTESTING_BEST_PRACTICES.md  BACKTEST_MEMORY_BRIDGE.md  BRANCH_MERGE_SUMMARY.md  CHANGELOG.md  CHECK_OLLAMA_MODELS.md  CHECK_OPENROUTER_ACCOUNT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  COORDINATION_GAME_PLAN.md  DEEPSEEK_DIRECTOR_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_OLLAMA_ARCHITECTURE.md  DOCKER_README.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.test  ENVIRONMENT_AUDIT_REPORT.md  FINAL_REPORT.md  FINAL_SESSION_REPORT.md  GITHUB_IMPROVEMENTS.md  HYBRID_ARCHITECTURE_PLAN.md  IMMEDIATE_ACTION_REQUIRED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_EXAMPLES.md  INVESTIGATION_REPORT.md  LINUX_TEST_RESULTS.md  MEMORISDK_COMPLETE_IMPLEMENTATION.md  MEMORISDK_EVALUATION.md  (+97 more)
.claude/: README.md
agent_mail/: README.md
examples/: memorisdk_poc.py
k8s/: deployment.yml
monitoring/: monitor_test.py
rust_core/: Cargo.toml  README.md
rust_core/src/: lib.rs  price_monitor.rs  types.rs
scripts/: README.md  benchmark_performance.py  check_agents.py  fix_agents.py  quick_start.sh  test_apis.py  test_system.py  validate_config.py
src/: adaptive_risk_manager.py  adaptive_strategy_evolution.py  collective_intelligence.py  config.py  intelligent_market_analyzer.py  live_validation_protocol.py  main.py  memory_manager.py  ml_predictive_engine.py  (+7 more)
(+159 files in other folders)
