[package]
name = "moon-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "moon_rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"  # WebSocket client
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography (for Solana/Ethereum) - Commented out for initial POC
# solana-sdk = "1.17"
# ethers = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
